--- a/SizeUp.Web/Content/views/community/communityWithIndustry.css
+++ b/SizeUp.Web/Content/views/community/communityWithIndustry.css
@@ -1,18 +1,19 @@
 ﻿#community { }
-#community h1 { }
+#community h1 {font-weight: normal;}
 #community h2 { font-weight: normal; color: #909090; }
 #community h3 { font-weight: normal; color: #909090; font-size:1.35em; display:inline-block; margin:0 0 0 1em;}
+#community p.description { margin: 0.5em 1em; }
 
-#community .mapWrapper { text-align: left; }
-#community .map { width: 50%; height:30em; margin: 2em 0; display:inline-block; }
+#community .map { width: 100%; height:30em; margin: 2em 0; display:inline-block; }
 #community .map .container { width: 100%; height: 100%; }
 
 #community .chartContainer { width: 42em; height: 21em; display:inline-block; overflow:hidden; margin:1em; position:relative;}
 
 #community .chartContainer p.buttons { display: inline-block; font-size:1.1em; margin: 0 0 0 1em; position: absolute; right:4.5em;}
 
-#community ul.features { width: 45%; display:inline-block; vertical-align:top; margin:2em 0 2em 1em; }
-#community ul.features li {background-color:#f0f0f0; border-radius:1em; padding:1em 2em; margin: 0 0 1em 0; }
-#community ul.features li a { }
+#community ul.features {  }
+#community ul.features li { display:inline-block; background-color:#f0f0f0; border-radius:1em; padding:1em 2em; margin: 0 0 0 0; width: 20em; }
+#community ul.features li img { display: inline-block; }
+#community ul.features li a.button {display:inline-block; }
 
 
